package modelo;

public enum CategoriaProduto {
    PERIFERICO,
    ELETRONICO,
    COMPONENTE,
    ACESSORIO,
    AUDIO
}
