classDiagram
    class SistemaInfinitHub {
        <<interface>>
        +cadastrarProduto(produto)
        +removerProduto(nome)
        +pesquisarProdutoPorNome(nome)
        +listarTodosProdutos()
        +pesquisarProdutosPorCategoria(categoria)
        +listarProdutosComEstoqueDisponivel()
        +reporEstoque(nome, qtd, custo)
        +cadastrarPedido(pedido)
        +removerPedido(codigo)
        +listarPedidosPorStatus(status)
        +getSaldoAtual()
        +setSaldoAtual(saldo)
        +calcularFaturamentoTotal()
        +calcularLucroTotal()
        +salvarDados()
        +recuperarDados()
    }

    class InfinitHubEcommerce {
        -Map produtos
        -Map pedidos
        -double saldoAtual
    }

    class GravadorDeDados {
        +salvarProdutos(produtos)
        +recuperarProdutos()
        +salvarPedidos(pedidos)
        +recuperarPedidos()
        +salvarSaldo(saldo)
        +recuperarSaldo()
    }

    class Produto {
        <<Serializable>>
        -String nome
        -CategoriaProduto categoria
        -double precoVenda
        -double precoCusto
        -int quantidadeEmEstoque
    }

    class Pedido {
        <<Serializable>>
        -String codigo
        -List itens
        -LocalDateTime dataHoraPedido
        -StatusPedido status
    }

    class ItemPedido {s
        <<Serializable>>
        -Produto produto
        -int quantidade
        +getSubtotal()
    }

    class CategoriaProduto {
        <<enumeration>>
        PERIFERICO
        ELETRONICO
        COMPONENTE
        ACESSORIO
        AUDIO
    }

    class StatusPedido {
        <<enumeration>>
        AGUARDANDO_PAGAMENTO
        PAGO
        ENVIADO
        ENTREGUE
        CANCELADO
    }

    SistemaInfinitHub <|.. InfinitHubEcommerce
    InfinitHubEcommerce ..> GravadorDeDados
    InfinitHubEcommerce "1" *-- "*" Produto
    InfinitHubEcommerce "1" *-- "*" Pedido
    Pedido "1" *-- "1..*" ItemPedido
    ItemPedido "1" --> "1" Produto
    Produto ..> CategoriaProduto
    Pedido ..> StatusPedid